inline method